Fixed Z-Index on Navbar and corrected dropdown
The dropdown now only displays if it has focus-within not also when it is hovered. Also clicking the dropdown-button doesn't reload the page anymore making navigation on mobile much easier.

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ nav {
     top: 0;
     width: 100%;
     box-shadow: 0px 1px 4px var(--shadow);
+    z-index: 10000000;
 }
 
 nav a {
@@ -151,7 +152,6 @@ nav .tab_link:focus {
     transform: translateY(-.2rem);
 }
 
-.dropdown:hover > .dropdown-content,
 .dropdown:focus-within > .dropdown-content  {
     display: block;
 }
